# unn-python-2022

homeworks/relby/1/: main.py  questions.csv
homeworks/relby/zachet/: pyproject.toml
practice/relby/7/: output1.txt  task1.py  task2.py
